Swag comments parsing correctly
